--- a/README
+++ b/README
@@ -6,3 +6,11 @@
 
   Released under the Apache License 2.0
 */
+
+Changelist
+
+v. 0.6 Bugfix
+	* Improved options page: automatic save, some url cleanup.
+	* Now automatically reconnects your webui to your deluge daemon.  Will not attempt to start an offline daemon.
+	
+v. 0.5 Initial Release
