git-svn-id: https://deluge-siphon.googlecode.com/svn/trunk@14 d0f773b1-da4e-23c3-c3ab-6f5bd0db0e2f

--- a/README
+++ b/README
@@ -12,5 +12,6 @@ Changelist
 v. 0.6 Bugfix
 	* Improved options page: automatic save, some url cleanup.
 	* Now automatically reconnects your webui to your deluge daemon.  Will not attempt to start an offline daemon.
+	* Password no longer a required field.
 	
 v. 0.5 Initial Release
