--- a/README
+++ b/README
@@ -9,6 +9,10 @@
 
 Changelist
 
+v 0.61 Bugfix
+	* More consistent styles for inpage notifications
+	* Better direction of user to options page.
+
 v. 0.6 Bugfix
 	* Improved options page: automatic save, some url cleanup.
 	* Now automatically reconnects your webui to your deluge daemon.  Will not attempt to start an offline daemon.
