--- a/README
+++ b/README
@@ -9,6 +9,10 @@
 
 Changelist
 
+v 0.63.3 Bugfix
+	* Added support for all private trackers that do not include authentication tokens in their torrent urls, or require cookies to download torrent files. Should make this compatible with many many more trackers.
+	* Added a link to log into your web-ui from extension tooltip.
+
 v 0.63.2 Bugfix
 	* Spelling error in options page.
 	* Major refactor including:
