--- a/README
+++ b/README
@@ -8,6 +8,10 @@
 
 
 Changelist
+v 0.64 Upgrade to Manifiest 2.0, AJAX link support
+	* Upgraded manifest.json and relative files to 2.0
+	* Modified event listeners to use a single global "contextmenu" event listener on the window, so that sites that use AJAX updating to insert new links will work without having to re-scan the DOM for new anchor elements. This is also less work for the browser (versus scanning anchor elements) -- any contextmenu events will bubble up to this listener without having multiples. (lawrencealan)
+
 v 0.63.6 Magnet Support
 	* Issue 7: Now supporting sending remote magnet links to your deluge server.
 
